# synkka

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
synkka/: exceptions.py  iterators.py  types.py  utilities.py
tests/: test_iterators.py
